--- a/index.html
+++ b/index.html
@@ -3,12 +3,62 @@
 
 <head>
 	<style>
+		.nav__links, a{
+			font-family: "Montserrat", sans-serif;
+			font-size: 18px;
+			color:rgb(211, 193, 166);
+			text-decoration:none;
+		}
+		header{
 
+			background-color:blueviolet;
+			display: flex;
+			justify-content:flex-end;
+			align-items: center;
+			padding-bottom:30px;
+			padding-top:30px;
+		}
+		.nav__links{
+			list-style:none;
+		}
+		.nav__links li{
+			display: inline-block;
+			padding:0px 20px;
+		}
+		.nav__links li a{
+			transition: all 0.3s ease 0s;
+			
+		}
+		.nav__links a:hover{
+			color:#0088a9;
+		}
+		button{
+			padding:9px 25px;
+			background-color:rgba(0,136,169,1);
+			border: none;
+			border-radius:50px;
+			cursor: pointer;
+			transition: all 0.3s ease 0s;
+		}
+		button:hover{
+			background-color:rgba(0,136,169,0.7);
+		}
+	ul{
+		display: block;
+		margin-block-start: 1em;
+		margin-block-end: 3em;
+		margin-inline-start: 0px;
+		}
+		body{
+			background-color:rgb(224, 217, 217);
+		}
 		
 		
-		body {
-			background-color: #c5171702;
-			margin: 10%;
+		#main{
+			background-color:rgb(224, 217, 217);
+			margin-left: 10%;
+			margin-right: 10%;
+			margin-bottom:10%;
 		}
 
 		
@@ -32,10 +82,13 @@
 
 		
 		div#tribute-data {
-			background-color: rgb(46, 139, 87, 0.25);
+			background-color: rgba(36, 65, 49, 0.25);
 			box-shadow: 20px 20px 20px rgba(152, 183, 251, 0.849);
-			font-family: Georgia;
-			padding: 25px 25px;
+			font-family:sans-serif;
+			padding-left: 105px;
+			padding-top: 15px;
+			padding-bottom: 25px;
+			padding-right: 155px;
 			margin: 11px;
 			margin-top: 50px;
 		}
@@ -50,13 +103,25 @@
 
 		
 		#tribute-link {
-			text-decoration: none;
-			color: black;
+			font-style:italic;
+			color: blue;
 		}
 	</style>
 </head>
 
-<body>
+<body><header>
+	<nav>
+		<ul1 class="nav__links">
+			<li><b>Home</b></li>
+			<li><b>References</b></li>
+			<li><b>Services</b></li>
+			<li><b>About</b></li>
+
+		</ul1>
+		<a class="cta" href="#"></a><button>Contact</button>
+	</nav>
+</header>
+
 	<main id="main">
 
 		
@@ -83,42 +148,43 @@
 			<!--Achievements and other
 				details of the person-->
 			<h1 class="title-APJ">
-				About the Legend
+				About the Legend<br><br><br>
 			</h1>
 
 			
+<ul list-style-type:disc>
+	<li><strong>1914</strong> - Born in Cresco, Iowa</li><br><br>
+	<li><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
+	<li></li><strong>1935</strong> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. 
+	"I saw how food changed them", he said. "All of this left scars on me.",</li>
+	<li></li><strong>1937</strong> - Finishes university and takes a job in the US Forestry Service</li>
+	<li></li><strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts.
+	 Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.</li>
+	 <li><strong>1941</strong> - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. 
+	Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science.</li>
+	<li></li><strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology</li>
+    <li></li><strong>1944</strong> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth.</li><br><br>
+	<li></li><strong>1945</strong> - Discovers a way to grown wheat twice each season, doubling wheat yields</li>
+	<li></li><strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.</li>
+	<li></li><strong>1962</strong> - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population</li>
+	<li></li><strong>1970</strong> - receives the Nobel Peace Prize</li>
+    <li></li><strong>1983</strong> - helps seven African countries dramatically increase their maize and sorghum yields</li>
+	<li></li><strong>1984</strong> - becomes a distinguished professor at Texas A&M University</li>
+	<li></li><strong>2005</strong> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
+	<li></li><strong>2009</strong> - dies at the age of 95.</li>
+</ul>
 
-<p>
-    1914 - Born in Cresco, Iowa<br><br>
-    1933 - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"<br><br>
-    1935 - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me.",<br><br>
-    1937 - Finishes university and takes a job in the US Forestry Service<br><br>
-    1938 - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.<br><br>
-    1941 - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science.<br><br>
-    1942 - Receives a Ph.D. in Genetics and Plant Pathology<br><br>
-    1944 - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth.<br><br>
-    1945 - Discovers a way to grown wheat twice each season, doubling wheat yields<br><br>
-    1953 - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.<br><br>
-    1962 - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population<br><br>
-    1970 - receives the Nobel Peace Prize<br><br>
-    1983 - helps seven African countries dramatically increase their maize and sorghum yields<br><br>
-    1984 - becomes a distinguished professor at Texas A&M University<br><br>
-    2005 - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."<br><br>
-    2009 - dies at the age of 95.<br><br>
-        
-			</p>
-
+	<p>"Borlaug's life and achievement are testimony to the far-reaching <br>
+	contribution that one man's towering intellect, persistence <br>
+	and scientific vision can make to human peace and progress."<br><br><br>
+	-- Indian Prime Minister Manmohan Singh</p>
 
 		</div>
-		<br>
-		 For more information,
-		check out
-		<a id="tribute-link" href="#">
-			<b>If you have time, you should read more about this incredible human being on his</b>
-             Wikipedia entry..
-			<small>Developed by @<a href="#"><br>
-				-- Indian Prime Minister Manmohan Singh.<br></a></a>
-		</small>]
+		<p1>If you have time, try to read more on this incredible human being on his
+			<a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="blank">
+				wikipedia entry
+			</a>
+		</p1>
 	</main>
 </body>
 
