make changes in the sytle sheet and hi class

--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
 			<img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" id="image"
             alt="Error Loading Image">
 			<small id="caption">
-				Dr. Norman Borlaug, 
+				
+				<strong>Dr. Norman Borlaug, 
                 third from the left, 
                 trains biologists in Mexico on how to increase wheat yields -
-                 part of his life-long war on hunger.
-
-			</small>
+                 part of his life-long war on hunger.</strong>
+				</small>
 		</div>
 
 		<div id="tribute-data">
@@ -148,7 +148,7 @@
 			<!--Achievements and other
 				details of the person-->
 			<h1 class="title-APJ">
-				About the Legend<br><br><br>
+				ABOUT THE LEGEND<br><br><br>
 			</h1>
 
 			
